--- a/carbon_frontend/src/layouts/user/assets/css/style.css
+++ b/carbon_frontend/src/layouts/user/assets/css/style.css
@@ -128,11 +128,13 @@
 
 .organise {
   max-width: 400px;
-  background-color: #fff;
+  /* background-color: #fff; */
   transition: all 0.4s linear;
   position: relative;
   z-index: 99;
   overflow: hidden;
+  background-color: rgb(5, 71, 35);
+  color: #fff;
 }
 
 .organise:after {
